--- a/app/src/main/res/layout/activity_login_page.xml
+++ b/app/src/main/res/layout/activity_login_page.xml
@@ -13,7 +13,7 @@
         android:layout_height="@dimen/_120sdp"
         android:layout_gravity="center"
         android:layout_marginTop="@dimen/_20sdp"
-        android:src="@drawable/Ecommerce"
+        android:src="@drawable/ecommerce"
         />
     <TextView
         android:layout_width="match_parent"
